# genice3-svg

./: .gitignore  GITHUB_SETUP.md  LICENSE  README.md  pyproject.toml
genice3_svg/: __init__.py  render_png.py  render_svg.py
genice3_svg/exporter/: __init__.py  png.py  svg.py
test/: test1.sh
